<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transvision.trmcollection.fragments.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_txt_mr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mr_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/settings_mr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_weight="0.35" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_txt_mr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mr_code"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/settings_mr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_weight="0.35" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_txt_device_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/device_id"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/settings_device_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_weight="0.35" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_txt_app_ver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_ver"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/settings_app_ver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_weight="0.35" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_txt_bt_printer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_printer"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/settings_bt_printer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_weight="0.35" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_modify_printer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32"
            android:layout_marginStart="@dimen/dp32"
            android:layout_marginEnd="@dimen/dp32"
            android:text="@string/modify_printer_btn"/>

        <Button
            android:id="@+id/btn_test_printer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp32"
            android:text="@string/printer_test_btn"/>

    </LinearLayout>

    <TextView
        android:id="@+id/settings_company_details_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp8"
        android:gravity="center"
        android:text="@string/company_details"
        android:textColor="@color/company_details_color"
        android:textSize="@dimen/text12"/>

</RelativeLayout>
