<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transvision.trmcollection.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cb_testing_app"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/subdiv_logo"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/subdiv"/>

            <TextView
                android:id="@+id/main_login_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/login_txt"
                android:textColor="@color/primary_text"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp64"
                android:layout_marginStart="@dimen/dp64"
                android:layout_marginTop="@dimen/dp64"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_user_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/dp4"
                    android:text="@string/login_user_txt"
                    android:textColor="@color/spinner_label"
                    android:textSize="@dimen/text14"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:background="@color/black"/>

                <Spinner
                    android:id="@+id/login_users_spin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:background="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp32"
                    android:text="@string/login_btn"
                    android:textSize="@dimen/text18"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/company_details_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp8"
        android:gravity="center"
        android:text="@string/company_details"
        android:textColor="@color/company_details_color"
        android:textSize="@dimen/text12"/>

    <CheckBox
        android:id="@+id/cb_testing_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:text="@string/testing_app" />
</RelativeLayout>
