<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transvision.trmcollection.fragments.Collection">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp8"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginTop="@dimen/dp16"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_customer_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_customer_account_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_id"
                android:imeOptions="actionSearch"
                android:inputType="number"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/customer_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_customer_rrno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer_rrno"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/customer_rrno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_customer_account_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer_account_id"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/customer_account_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_customer_tariff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer_tariff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/customer_tariff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_customer_bill_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer_bill_amount"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/customer_bill_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_paid_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paid_amount"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_paid_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_add_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/add_transaction" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TableLayout
                android:id="@+id/details_table_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/details_table_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textView100"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/rrno"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView200"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/acc_id"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView300"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/amount"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView400"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="" />
                </TableRow>
            </TableLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/details_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:visibility="gone"
        app:menu="@menu/print_navigation" />

</RelativeLayout>
